--- a/ToDoApp/todo_list/templates/base.html
+++ b/ToDoApp/todo_list/templates/base.html
@@ -11,7 +11,30 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="{% url 'home' %}">To-Do List</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+    
+
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      {% csrf_token %}
+      <input class="form-control mr-sm-2" type="search" placeholder="Add Item" aria-label="Search" name="item">
+      <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Add to List</button>
+    </form>
+  </div>
+</nav>
+  <br />
+  <div class = "container">
+    {% block content %}
+    {% endblock %}
+  </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
