--- a/ToDoApp/todo_list/templates/home.html
+++ b/ToDoApp/todo_list/templates/home.html
@@ -7,6 +7,7 @@
 				<button class="close" data-dismiss="alert">
 					<small><sup>x</sup></small>
 				</button>
+				{{ messsage }}
 			</div>
 		{% endfor %}
 	{% endif %}
@@ -17,7 +18,7 @@
 			<tr>
 				<td>{{ things.item }}</td>
 				<td><center>{{ things.completed }}</center></td>
-				<td><center>Delete</center></td>
+				<td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
 			</tr>
 	{% endfor %}
 	</table>
