--- a/ToDoApp/todo_list/templates/home.html
+++ b/ToDoApp/todo_list/templates/home.html
@@ -15,14 +15,23 @@
 {% if all_items %}
 	<table class="table table-bordered">
 	{% for things in all_items %}
-			<tr>
-				<td>{{ things.item }}</td>
-				<td><center>{{ things.completed }}</center></td>
+		{% if things.completed %}
+			<tr class="table-secondary">
+				<td class="striker">{{ things.item }}</td>
+				<td><center><a href="{% url 'uncross' things.id %}">Uncross</a></center></td>
 				<td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
 			</tr>
+		{% else %}
+			<tr>
+				<td>{{ things.item }}</td>
+				<td><center><a href="{% url 'cross_off' things.id %}">Cross Off</a></center></td>
+				<td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
+			</tr>
+		{% endif %}
 	{% endfor %}
 	</table>
 
 {% endif %}
 
 {% endblock %}
+
