--- a/ToDoApp/todo_list/templates/home.html
+++ b/ToDoApp/todo_list/templates/home.html
@@ -17,13 +17,13 @@
 	{% for things in all_items %}
 		{% if things.completed %}
 			<tr class="table-secondary">
-				<td class="striker">{{ things.item }}</td>
+				<td class="striker"><a href="{% url 'edit' things.id %}">{{ things.item }}</a></td>
 				<td><center><a href="{% url 'uncross' things.id %}">Uncross</a></center></td>
 				<td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
 			</tr>
 		{% else %}
 			<tr>
-				<td>{{ things.item }}</td>
+				<td><a href="{% url 'edit' things.id %}">{{ things.item }}</a></td>
 				<td><center><a href="{% url 'cross_off' things.id %}">Cross Off</a></center></td>
 				<td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
 			</tr>
