--- a/ToDoApp/todo_list/templates/home.html
+++ b/ToDoApp/todo_list/templates/home.html
@@ -24,7 +24,7 @@
 		{% else %}
 			<tr>
 				<td><a href="{% url 'edit' things.id %}">{{ things.item }}</a></td>
-				<td><center><a href="{% url 'cross_off' things.id %}">Cross Off</a></center></td>
+				<td><center><a href="{% url 'cross_off' things.id %}">Done</a></center></td>
 				<td><center><a href="{% url 'delete' things.id %}">Delete</a></center></td>
 			</tr>
 		{% endif %}
