--- a/ToDoApp/static/css/my_css.css
+++ b/ToDoApp/static/css/my_css.css
@@ -1,3 +1,10 @@
 .striker{
 	text-decoration: line-through;
+
 }
+
+/*.navbar-brand {
+  transform: translateX(-50%);
+  left: 50%;
+  position: absolute;
+}*/
