--- a/ToDoApp/todo_list/templates/base.html
+++ b/ToDoApp/todo_list/templates/base.html
@@ -12,34 +12,39 @@
 
     <link rel="stylesheet" href="{% static 'css/my_css.css' %}">
 
-    <title>Hello, world!</title>
+    <title>To-Do List</title>
   </head>
   
   <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{% url 'home' %}">To-Do List</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5dabf4">
+  <!-- <a class="navbar-brand mb-0 h1 text" href="{% url 'home' %}" style="text-align:center;"> To-Do List</a> -->
+
+  <a class="navbar-brand" style="left: 50%; position: absolute;" href="{% url 'home' %}">To-Do List</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
     
-s
     </ul>
     <form class="form-inline my-2 my-lg-0" method="POST">
       {% csrf_token %}
       <input class="form-control mr-sm-2" type="search" placeholder="Add Item" aria-label="Search" name="item">
-      <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit"> Add to List </button>
+      <button class="btn btn-success" type="submit"> Add to List </button>
     </form>
   </div>
 </nav>
+
   <br />
+
   <div class = "container">
     {% block content %}
     {% endblock %}
   </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
